# VisionTransformers

./: .pre-commit-config.yaml  ATTENTION_IMPROVEMENT_GUIDE.md  CHANGELOG.md  Dockerfile  PROJECT_STATUS_REPORT.md  README.md  README_DUAL_CHANNEL.md  WEB_INTERFACE_README.md  advanced_attention.py  custom_attention.py  demo_dual_channel.py  demo_quick.py  docker-compose.yml  improve_attention.py  install_dual_channel.py  pyproject.toml  quick_start.py  simple_test.py  test_gif_generation.py
config/: balanced.yaml  high_quality.yaml  memory_saver.yaml  mvp1.yaml  mvp2.yaml  ultra_quality.yaml
scripts/: demo_quick.py  docker-entrypoint.sh  generate_real_gif.py  quick_start.py  run_api.py  run_streamlit.py
src/: __init__.py  cli.py  streamlit_demo.py
src/api/: __init__.py  app.py  middleware.py  schemas.py
src/core/: __init__.py  attention_engine.py  custom_attention.py  dual_channel_attention.py  gif_composer.py  hardware_detector.py  improve_attention.py  optimized_pipeline.py  performance_monitor.py  pipeline.py  video_decoder.py
src/models/: __init__.py  model_factory.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: conftest.py  test_gif_generation.py  test_pipeline.py  test_simple.py  test_working_pipeline.py
